--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 	</head>
 	<body>
 		<script>
-			const slug = "sdfjsaldfjlskdfjlksdjflsdjflsdfj";
+			const slug = "sdfjsaldfjlskdfjlksdjflsdjflsdfjs";
 			const socket = new WebSocket(
 				`ws://localhost:8080/${slug}`,
 				"sdfjsaldfjlskdfjlksdjflsdjflsdfj"
 			);
 
 			socket.addEventListener("open", (event) => {
-				console.log(`Connected to ${slug}.`);
+				<!-- console.log(`Connected to ${slug}.`); -->
 
 				// Send a message
 				socket.send("Hello, world!");
